--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-      "lib": ["dom", "es5", "es2016"],
+      "allowJs": true,
+      "lib": ["dom", "es5", "es6", "es2016"],
       "target": "es5",
       "module": "es2015",
       "moduleResolution": "node",
@@ -17,4 +18,4 @@
         "tests/**/*.tsx"
     ],
     "exclude": ["node_modules"]
-  }
+}
